welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:2: error: Missing closing brace `}' assumed here
var Val = 0
^